syntax = "proto3";

package heartbeat;

message Request {
    uint64 client_id = 1;
    uint64 user_id = 2;
    uint64 msg_id = 3;
    uint64 session_id = 4;
    string data = 5;
}

message Response {
    uint64 client_id = 1;
    uint64 user_id = 2;
    uint64 msg_id = 3;
    uint64 session_id = 4;
    string data = 5;
}